Update Registration Service